<resources>
    <string name="app_name">Woope</string>
    <string name="title_home">فروشگاه‌ها</string>
    <string name="title_search">جستجو</string>
    <string name="title_profile">پروفایل</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">Woope</string>
    <string name="backdrop_subtitle">با ووپ پرداخت کنید تخفیف بخرید</string>
    <string name="right_switch">نقدی</string>
    <string name="left_switch">اعتباری</string>
    <string name="transaction_list">لیست پرداخت</string>
    <string name="action_buy">ثبت خرید</string>
    <string name="action_store">صفحه فروشگاه</string>
    <string name="enter_phone_number">شماره موبایل خود را وارد کنید</string>
    <string name="accept">تایید</string>
    <string name="pay">پرداخت</string>
    <string name="share">به اشتراک بزار</string>
    <string name="username">نام کاربری (Ali1397)</string>
    <string name="password">رمز عبور</string>
    <string name="enter">ورود</string>
    <string name="forget_password">رمز عبور خود را فراموش کرده‌اید؟</string>

    <string name="save">ثبت</string>
    <string name="email">ایمیل</string>
    <string name="new_password">رمز عبور جدید</string>
    <string name="verification_code">کد تایید</string>
    <string name="entered">وارد شدید</string>
    <string name="enteryournumber">شماره موبایل خود را وارد کنید!</string>
    <string name="remaining_time">زمان باقیمانده</string>
    <string name="wrong_code">کد شما صحیح نمیباشد!</string>
    <string name="code_accepted">کد شما تایید شد!</string>
    <string name="success_login">ورود موفق!</string>
    <string name="enter_username">نام کاربری را وارد کنید!</string>
    <string name="enter_password">رمز عبور را وارد کنید!</string>
    <string name="enter_email">ایمیل را وارد کنید!</string>
    <string name="wrong_username">نام کاربری اشتباه!</string>
    <string name="wrong_pass">رمز عبور اشتباه!</string>
    <string name="wrong_email">ایمیل اشتباه!</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام کنید</string>
    <string name="phonenumber">شماره موبایل</string>
    <string name="press_again_to_exit">برای خروج دوباره بازگشت را بزنید</string>
    <string name="upload_error">خطا در آپلود عکس</string>
    <string name="support">پشتیبانی</string>
    <string name="logout_profile">خروج</string>
    <string name="support_phoneNumber">021-40445086</string>
    <string name="support_telegram_id">t.me/woope</string>
    <string name="support_website">woope.ir</string>
    <string name="support_instagram">woope.ir</string>
    <string name="contact_woope_support">تماس با پشتیبانی ووپ</string>
    <string name="name">نام</string>
    <string name="familyName">نام خانوادگی</string>
    <string name="gender">جنسیت</string>
    <string name="male">آقا</string>
    <string name="female">خانم</string>
    <string name="age">سن</string>
    <string name="bio">درباره من</string>
    <string name="invalid_email">ایمیل نامعتبر</string>
    <string name="cashPayNotAllowed">امکان پرداخت نقدی برای این فروشگاه وجود ندارد</string>
    <string name="askStoreForCashPay">از فروشگاه درخواست خرید نقدی کنید</string>
    <string name="receive_gift">دریافت هدیه</string>
    <string name="back_btn">بازگشت</string>
    <string name="edit_profile">ویرایش پروفایل</string>
    <string name="network_error">خطا در ارتباط با شبکه. لطفا ارتباط اینترنت را بررسی کنید</string>
    <string name="error">خطا در ارتباط. لطفا مجدد تلاش کنید</string>
    <string name="sms_msg">لطفا کد تایید پیامک شده را وارد کنید</string>
    <string name="rules">با ثبت نام در این برنامه تمام قوانین و مقررات را می‌پذیرم</string>




    <string name="rules_text">
ووپ تابع قوانین و مقررات جمهوری اسلامی ایران می باشد.
\n\n
ثبت نام در ووپ و ایجاد حساب کاربری به منزله پذیرفتن کلیه قوانین و مقررات ووپ است.
\n\n
حساب کاربری پس از ایجاد قابل نقل و انتقال نمی باشد و هر شخص تنها می تواند یک حساب کاربری برای خود داشته باشد.
\n\n
طبق قوانین ووپ هر ووپ(امتیاز) معادل ده هزار(10.000) ریال می باشد.
\n\n
تمامی فروشگاه های حاضر در سامانه موظف به رعایت قوانین ووپ و دریافت ووپ از مشتریان می باشند.
\n\n
تمام فروشگاه ها ملزم به فعالیت در چهارچوب قوانین جمهوری اسلامی ایران می باشند.
\n\n
همۀ فعالیت‌ها و عملیاتی که از طریق حساب کاربری شخص در ووپ انجام می‌شود به نام کاربر ثبت شده و کلیه مسئولیت های آن بر عهدۀ کاربر است
\n\n
در صورتی که در قوانین مندرج، رویه ها و سرویس های ووپ تغییراتی در آینده ایجاد شود، در همین صفحه منتشر و به روز رسانی می شود.
\n\n
ووپ برای حریم شخصی افراد احترام قائل است. بدین منظور اطلاعاتی که از کاربران برای ثبت نام دریافت میشود به هیچ عنوان در اختیار شخص یا سازمانی قرار نخواهد گرفت و کاملا محرمانه است.
\n\n
در صورتیکه تعداد ووپ دریافتی با خرید شما مغایرت دارد، یا نمی توانید از ووپ خود در فروشگاه ها استفاده کنید می توانید به روابط عمومی ووپ اطلاع دهید.
\n\n
در صورت داشتن هرگونه سوال درباره حقوق کاربران میتوانید با شماره تلفن و یا پست الکترونیک ارتباط برقرار کنید.
\n\n
پاسخگوی نیاز های شما هستیم.
        \n
02140445047
        \n
info@woope.ir
\n
</string>

    <string name="confirmPhoneNumber">شماره موبایل خود را تایید کنید</string>

    <string name="invalidUsernameOrPassword">نام کاربری یا رمز عبور نامعتبر!</string>

    <string name="noPermission">عدم دسترسی</string>

    <string name="passwordLenghtNotEnough">رمز عبور باید 4 رقم یا بیشتر باشد</string>

    <string name="invalidUsername">نام کاربری معتبر نیست</string>

    <string name="info">اطلاعات</string>
    <string name="gallery">گالری</string>

    <string name="store_gallery_noPhoto">عکسی موجود نیست</string>

    <string name="report_store">گزارش عدم همکاری فروشگاه</string>

    <string name="like">لایک</string>

    <string name="loading">در حال بارگزاری ...</string>

    <string name="online_sell">خرید غیرحضوری</string>

    <string name="areYouSureAboutReportingStore">از گزارش عدم همکاری اطمینان دارید؟</string>

    <string name="yes">بله</string>

    <string name="vip_store">درخواست خدمات VIP</string>

    <string name="sending_vip_request">در حال ارسال درخواست خرید غیرحضوری</string>

    <string name="help">راهنما</string>

    <string name="invalid_price">مبلغ نامعتبر</string>
    <string name="overflowed_price">حداکث مبلغ مجاز 10,000,000 تومان است</string>
    <string name="invalidDiscountCode">کد تخفیف نامعتبر</string>

    <string name="BirthDate">تاریخ تولد</string>
    <string name="choose">انتخاب کنید</string>

    <string name="doYouHaveDiscountCode">کد هدیه اختصاصی دارید؟</string>

    <string name="shareGiftCode">به اشتراک گذاری کد تخفیف</string>

    <string name="connecting">در حال اتصال</string>
    
    <string name="totalPrice">مبلغ کل</string>
    <string name="useStockToman">استفاده از موجودی تومانی</string>
    <string name="useWoope">استفاده از ووپ</string>
    <string name="returnWooope">ووپ بازگشتی</string>
    <string name="remainingToman">باقیمانده تومانی</string>
    <string name="giftWoope">هدیه</string>

    <string name="woope">با معرفی این فروشگاه به دوستانتان 5 ووپ به آنها هدیه دهید
        \n
        و پس از خریدشان 2 ووپ دریافت کنید</string>

    <string name="chooseZone">انتخاب محله</string>
    <string name="chooseCategory">انتخاب دسته بندی</string>
    <string name="showMore">نمایش بیشتر</string>


    <!--<string name="payDialog">فروشگاه ها رو تو شبکه های مجازی-->
        <!--\n-->
        <!--به دوستات معرفی کن و ووپ بگیر!</string>-->

    <string name="payDialog">فروشگاه ها رو توی شبکه های مجازی\nبه دوستات معرفی کن و درآمد کسب کن!</string>
    <string name="earnDialog_1">فروشگاه ها رو تو شبکه های مجازی</string>
    <string name="earnDialog_2">به دوستات معرفی کن و ووپ بگیر!</string>

    <!--<string name="payDialog_1">پول هایی رو که با معرفی فروشگاه ها</string>-->
    <!--<string name="payDialog_2">جمع کردی،خرج کن!</string>-->

    <string name="payDialog_1">به فروشگاه ها پرداخت کن</string>
    <string name="payDialog_2">و از تخفیفاتشون استفاده کن</string>



</resources>
