<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewBg"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.Toolbar
        android:id="@+id/contact_us_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:layoutDirection="rtl"
        app:layout_collapseMode="pin"
        app:layout_scrollFlags="scroll|enterAlways" />

    <LinearLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="83dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/toolbar_shadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/home_shadow" />

        <!--<WebView-->
        <!--android:id="@+id/contactUs_webView"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/phone_woope_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/phone_green" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:text="@string/support_phoneNumber"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/telegram_woope_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/telegram_icon"/>

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:text="@string/support_telegram_id"
                        android:layout_margin="10dp"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/website_woope_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/website_icon" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:text="@string/support_website"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/instagram_woope_support"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_margin="5dp">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        app:srcCompat="@drawable/instagram_icon" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_margin="10dp"
                        android:text="@string/support_instagram"/>

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/contactUs_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center_vertical"
        android:background="@drawable/home2"
        android:gravity="center"
        android:layoutDirection="rtl">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/contact_woope_support"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:textStyle="bold" />

    </android.support.v7.widget.Toolbar>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/loading_contactUs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="#59CC89"
        app:indicatorName="BallPulseIndicator" />

</RelativeLayout>


