<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgbx_logo_login"
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:layout_marginTop="10dp"
                android:soundEffectsEnabled="true"
                app:srcCompat="@drawable/woope_blue" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/usernamelayout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/txtbx_username_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableRight="@drawable/round_perm_identity_24"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textColor="@color/white"
                android:textColorHint="@color/textPrimary"
                android:textDirection="rtl" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordlayout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <EditText
                android:id="@+id/txtbx_password_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableRight="@drawable/round_lock_24"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/white"
                android:textDirection="ltr"
                android:textColorHint="@color/textPrimary" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/phonenumberlayout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textColor="@color/textPrimary"
            android:textColorHint="@color/textPrimary"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/passwordlayout_reg"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/txtbx_phonenumber_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/white"
                android:drawableEnd="@drawable/round_call_24"
                android:ellipsize="start"
                android:ems="10"
                android:gravity="center_horizontal"
                android:hint="@string/phonenumber"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/textPrimary"
                android:textDirection="ltr" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_accept_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:background="@drawable/button_border"
            android:text="@string/accept"
            android:textColor="@color/white" />


    <ProgressBar
        android:id="@+id/progressBar_userinfo"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="44dp"
        android:indeterminateDrawable="@drawable/progress_white"
        android:visibility="gone"
        tools:visibility="gone" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
